scripts/nullaway/original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8.txt
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/Graph.java:19: error: [NullAway] initializer method does not guarantee @NonNull field _primaryNode (line 17) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Graph() {
           ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/Named.java:71: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return _attributes.get(key);
        ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/TulipExporter.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
    private PrintStream ostream = null;
                        ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/AbstractSimpleExporter.java:139: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    		return null;
    		^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/NodeArray.java:21: error: [NullAway] assigning @Nullable expression to @NonNull field
        _elements = inlineValues ? new GraphPoint[length] : null;
                  ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/GraphMLExporter.java:15: error: [NullAway] assigning @Nullable expression to @NonNull field
	private PrintStream ostream = null;
	                    ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/GraphMLExporter.java:22: error: [NullAway] passing @Nullable parameter '(String)opts.get(ExporterOptions.OUTPUT_PATH)' where @NonNull is required
    	name = ExporterUtils.name((String)opts.get(ExporterOptions.OUTPUT_PATH));
    	                          ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/SimpleGraphVizExporter.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
	private PrintStream ostream = null;
	                    ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/SimpleGraphVizExporter.java:24: error: [NullAway] passing @Nullable parameter '(String)opts.get(ExporterOptions.OUTPUT_PATH)' where @NonNull is required
    	name = ExporterUtils.name((String)opts.get(ExporterOptions.OUTPUT_PATH));
    	                          ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/util/ReflectionUtilTest.java:27: error: [NullAway] initializer method does not guarantee @NonNull field obj (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
		public DummyClass(int one, double two, char three, float four,
		       ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/internal/GraphBuildContext.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return _objectToPointMap.get(o);
		^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/ExporterStub.java:11: error: [NullAway] @NonNull field _g not initialized
	private Graph _g;
	              ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/ReflectiveBuilder.java:17: error: [NullAway] unboxing of a @Nullable value
		final int generation = (Integer)options.get(BuilderOptions.GENERATION);
		                       ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/TestModel.java:120: error: [NullAway] initializer method does not guarantee @NonNull field _o (line 118) is initialized along all control-flow paths (remember to check for exceptions or early returns).
		public D() {
		       ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/TestModel.java:121: error: [NullAway] assigning @Nullable expression to @NonNull field
			_o = null;
			   ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/internal/NodeBuilder.java:33: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/internal/NodeBuilder.java:46: error: [NullAway] unboxing of a @Nullable value
		final int generation = (Integer)options.get(BuilderOptions.GENERATION);
		                       ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/Node.java:11: error: [NullAway] initializer method does not guarantee @NonNull field _arrayParent (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Node(NamedID ID,int generation) {
           ^
    (see http://t.uber.com/nullaway )
../original/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/model/Node.java:15: error: [NullAway] initializer method does not guarantee @NonNull field _arrayParent (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Node(NamedID ID, String name, int generation) {
           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
19 errors
